perf(logsearch): 优化日志查询SQL注入检查太敏感问题
Signed-off-by: 汪世胤 <wangshiyin@hinadt.com>